@@ -11,7 +11,7 @@ greaterThan(QT_MAJOR_VERSION, 4): QT += widgets
 TARGET = qmidiplayer
 TEMPLATE = app
 
-CONFIG += c++11
+CONFIG += c++14
 
 SOURCES += main.cpp\
 	qmpmainwindow.cpp \
