@@ -29,80 +29,7 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_1">
      <item>
-      <widget class="QTableWidget" name="twChannels">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="alternatingRowColors">
-        <bool>true</bool>
-       </property>
-       <property name="selectionMode">
-        <enum>QAbstractItemView::NoSelection</enum>
-       </property>
-       <property name="cornerButtonEnabled">
-        <bool>false</bool>
-       </property>
-       <property name="rowCount">
-        <number>16</number>
-       </property>
-       <property name="columnCount">
-        <number>6</number>
-       </property>
-       <row/>
-       <row/>
-       <row/>
-       <row/>
-       <row/>
-       <row/>
-       <row/>
-       <row/>
-       <row/>
-       <row/>
-       <row/>
-       <row/>
-       <row/>
-       <row/>
-       <row/>
-       <row/>
-       <column>
-        <property name="text">
-         <string>A</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>M</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>S</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Device</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Preset</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>...</string>
-        </property>
-       </column>
-       <item row="0" column="1">
-        <property name="text">
-         <string/>
-        </property>
-       </item>
-      </widget>
+      <widget class="QTableView" name="tvChannels"/>
      </item>
     </layout>
    </item>
